# cgprj-glengine

./: .color_coded  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Pikachu.mtl  README  compile.sh  main.fs  main.vs
data/: deferred_mix.fs  main.fs  main.vs  main_mrt.fs  main_mrt.vs  mrt_show.fs  pav.mtl  skybox.fs  skybox.vs  toon_shader.fs  void.fs
include/GLEngine/: Box.h  Camera.h  Common.h  Device.h  Engine.h  GLUtils.h  Image.h  ImageFactory.h  InputHandler.h  Light.h  Log.h  Material.h  MaterialManager.h  Mesh.h  Pipeline.h  Renderer.h  ResourceManager.h  Scene.h  Shader.h  ShaderManager.h  Skybox.h  Texture.h  Utils.h
include/GLEngine/FileReader/: MTLFileReader.h  OBJFileReader.h  PNGFileReader.h
src/: CMakeLists.txt  main.cc
src/GLEngine/: CMakeLists.txt  Camera.cc  Device.cc  Light.cc  Renderer.cc  ResourceManager.cc  Scene.cc  ShaderManager.cc
src/GLEngine/FileReader/: MTLFileReader.cc  OBJFileReader.cc  PNGFileReader.cc
src/glengine/: Backend.h  Common.h  Log.h  Object.h  PNG.h  ResourceManager.cc  ResourceManager.h  Scene.cc  Singleton.h
src/glengine/FileReader/: MTLFileReader.cc  MTLFileReader.h  OBJFileReader.cc  OBJFileReader.h  PNGFileReader.cc
